Mac/Desktop Page Info: Fix spacing when no permissions to show.

The Page Info bubble on macOS currently only adds padding after the cookies UI
if there are any permissions to be shown. This was fine because Page Info would
show a set list of permissions always.

r503089 updated Page Info to only show non-factory-default permissions, which
meant there was no padding added on sites without non-default permissions. Fix
by adding the padding always.

Bug: 767115
Change-Id: Ia3e6451c8631c9b26c84ff7aa3c79ec330303a33
Reviewed-on: https://chromium-review.googlesource.com/676543
Reviewed-by: Lucas Garron <lgarron@chromium.org>
Commit-Queue: Patti <patricialor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503653}
Former-commit-id: e186d66e32393d838416bf8f0d873cb276ffecdc